syntax = "proto3";

option go_package = "bb.com/todo/grpc/todo";

package todo;

service TodoService {
  rpc AddTask (AddTaskRequest) returns (AddTaskResponse) {}

  rpc GetTasks(GetTasksRequest) returns (GetTasksResponse) {}
}

message AddTaskRequest {
  string title = 1;
  string description = 2;
}

message AddTaskResponse {
  string id = 1;
}

message Task {
  string id = 1;
  string title = 2;
  string description = 3;
}

message GetTasksRequest {

}

message GetTasksResponse {
  repeated Task tasks = 1;
}
